--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "main": "./index.html",
   "name": "ASAT",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "window": {
     "title": "Aerohive Stand Alone Tool",
-    "toolbar": false,
+    "toolbar": true,
     "width": 800,
     "height": 600,
     "resizable": false,
