--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.3",
   "window": {
     "title": "Aerohive Stand Alone Tool",
-    "toolbar": true,
+    "toolbar": false,
     "width": 800,
     "height": 600,
     "resizable": false,
