--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "icon": "./images/aerohive_icon.gif"
   },
   "dependencies": {
-    "sqlite3": "~3.1.1"
+    "sqlite3": "~3.1.1",
+    "netmask": "1.0.5"
   }
 }
