--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "sqlite3": "~3.1.1",
-    "netmask": "1.0.5"
+    "netmask": "1.0.5",
+    "events": "1.1.0",
+    "ssh2": "0.4.13"
   }
 }
